Added a third message

--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,8 @@
      <body>
        Land of the Woo.
        Said I'm never lackin', always pistol packing
-With them automatics, we gon' send him to heaven
+With them automatics, we gon' send him to heaven.
+wait wait wait wait 
      </body>
 
 
